# education-weather-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.cursor/plans/: docker_containerization.plan.md  github_actions_ci_cd.plan.md  завдання_щодо_прикладів_різних_тестів.plan.md  запит_на_автоматизацію_запуску_з_маке.plan.md  покрашення_телеграм_клиента.plan.md  початковий_запит.plan.md
.github/workflows/: ci.yml  deepeval-integration.yml  release.yml
doc/: Finilised_Guide_with_Statments.md  Idea_How_To_Test_AI_Agent.md
doc/qa/: Bug_Reports.md  Level1_Checklist.md  Level2_DeepEval_Guide.md  QA_Summary_Report.md  README.md  Security_Analysis.md  TestCases_Level1.md
doc/qa/screenshots/: README.md
src/weather_agent/: __init__.py  agent.py  bot.py  config.py  weather.py
src/weather_agent/prompts/: __init__.py  system_prompt_v1.txt  system_prompt_v2.txt
tests/: conftest.py
tests/IntegrationLLM/: __init__.py  conftest.py  test_deepeval_metrics.py  test_deepeval_owasp.py
tests/IntegrationMock/: __init__.py  test_agent_tool_flow.py
tests/SystemLLM/: __init__.py  test_safety.py  test_task_completion.py
tests/SystemMock/: __init__.py  test_bot_handlers.py
tests/UnitLLM/: __init__.py  conftest.py  test_agent_fake_model.py
tests/UnitMock/: __init__.py  test_bot_texts.py  test_config.py  test_prompts.py  test_weather.py
